Fix h1 not word wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,6 @@ a {
 h1 {
   font-size: 2.4rem;
 
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 
